change sql server account

--- a/omicx/resources/domain-registry/appsettings.json
+++ b/omicx/resources/domain-registry/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=10.106.26.228;Initial Catalog=OMICXDomainRegistry;User ID=mptadmin;Password=MPT@dmin@2023;Persist Security Info=True;Trust Server Certificate=true"
+    "Default": "Data Source=10.106.26.228;Initial Catalog=OMICXDomainRegistry;User ID=crmdbadmin;Password=OmicxCrm2023;Persist Security Info=True;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
