--- a/omicx/resources/job-common/appsettings.json
+++ b/omicx/resources/job-common/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-      "Default": "Server=10.106.26.228; Database=crm.core;User Id=mptadmin;Password=MPT@dmin@2023;Connection Timeout=600;"
+      "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=600;"
     },
     "App": {
       "ServerRootAddress": "http://omicx-job-common-9703-service:9703/",
