--- a/omicx/resources/web-be/appsettings.json
+++ b/omicx/resources/web-be/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=10.106.26.228; Database=crm.core;User Id=mptadmin;Password=MPT@dmin@2023;Connection Timeout=60;MultipleActiveResultSets=True"
+    "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True"
   },
   "App": {
     "Multitenancy": true,
