--- a/omicx/resources/nginx/crm-dev.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev.metechvn.com.conf
@@ -20,14 +20,14 @@ server                  {
 
         location /AbpUserConfiguration {
                 client_max_body_size 100M;
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 proxy_buffers 16 16k;  
                 proxy_buffer_size 16k;
                 proxy_pass              http://web_back_host;
         }
 
          location /api/TokenAuth/Authenticate {
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 client_max_body_size 100M;
                 proxy_http_version 1.1;
                 proxy_pass_request_headers      on;
@@ -40,7 +40,7 @@ server                  {
                 proxy_pass http://author_service_host$request_uri;
         }
          location /api/TokenAuth/GetToken {
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 client_max_body_size 100M;
                 proxy_http_version 1.1;
                 proxy_pass_request_headers      on;
@@ -53,7 +53,7 @@ server                  {
                 proxy_pass http://author_service_host$request_uri;
         }
         location /api/TokenAuth/F88Authenticate {
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 client_max_body_size 100M;
                 proxy_pass http://author_service_host$request_uri;
         }
@@ -61,49 +61,49 @@ server                  {
 
        location /campaign-planning {
                 client_max_body_size 100M;
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass              http://omicx-campaign-planning-3000-service.default.svc.cluster.local:3000/campaign;
        }
 
       location /api {
                 client_max_body_size 100M;
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass              http://web_back_host$request_uri;
       }
       
       location /config {
-              resolver  kube-dns.kube-system.svc.cluster.local;
+              resolver  coredns.kube-system.svc.cluster.local;
               proxy_pass              http://web_back_host;
       }
       
       location /EncryptedAbpUserConfiguration/GetAll {
                 client_max_body_size 100M;
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 proxy_pass              http://web_back_host$request_uri;
         }
         location ~* ^/asm/(.*)$ {
-            resolver  kube-dns.kube-system.svc.cluster.local;
+            resolver  coredns.kube-system.svc.cluster.local;
             access_by_lua_file '/etc/nginx/conf.d/access.lua';
             proxy_pass              http://omicx-asm-3003-service.default.svc.cluster.local:3003/$1$is_args$args;
         }
         
         location ~* ^/catalog/(.*)$ {
-            resolver  kube-dns.kube-system.svc.cluster.local;
+            resolver  coredns.kube-system.svc.cluster.local;
             access_by_lua_file '/etc/nginx/conf.d/access.lua';
             proxy_pass              http://omicx-product-catalog-3005-service.default.svc.cluster.local:3005/$1$is_args$args;
         }
         
         location ~* ^/tenant-registration/(.*)$ {
-            resolver  kube-dns.kube-system.svc.cluster.local;
+            resolver  coredns.kube-system.svc.cluster.local;
             #access_by_lua_file '/etc/nginx/conf.d/access.lua';
             proxy_pass              http://omicx-tenant-registration-9755-service.default.svc.cluster.local:9755/$1$is_args$args;
         }
 
         location ~* ^/fsapi/(.*)$ {
                 client_max_body_size 100M;
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass          http://omicx-cci-5580-service.default.svc.cluster.local:5580/$1$is_args$args;
         }
@@ -115,52 +115,52 @@ server                  {
         }
 
         location ~*     ^/channelgw/(.*)$ {
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-channel-gateway-6969-service.default.svc.cluster.local:6969/$1$is_args$args;
         }
 
         #Redash
         location ~*     ^/jobcommon/(.*)$ {
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass              http://omicx-job-common-9703-service.default.svc.cluster.local:9703/$1$is_args$args;
         }
         location /zalo/webhook {
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-acd-zalo-connector-6969-service.default.svc.cluster.local:6969/webhook/zalo;
         }
 
         location /facebook/webhook {
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-acd-facebook-connector-7979-service.default.svc.cluster.local:7979/webhook/facebook;
        }
      
         location /api/v1/email/oauth2 {
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-social-configurations-7980-service.default.svc.cluster.local:7980;
         }
         location /api/v1/realtime-chat/ {
-        		resolver  kube-dns.kube-system.svc.cluster.local;
+        		resolver  coredns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-chat-statistics-80-service.default.svc.cluster.local:80;
         }
        
        location ~*     ^/public/(.*)$ {
                 client_max_body_size 100M;
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 proxy_pass http://omicx-cci-5580-service.default.svc.cluster.local:5580/public/$1;
         }
 
         location ~*     ^/static/(.*)$ {
         # point to mount folder at nfs.conf
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-nginx-7990-service.default.svc.cluster.local:7990/$1$is_args$args;
         }
         location     /api/tenant/register {
-                resolver  kube-dns.kube-system.svc.cluster.local;
+                resolver  coredns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-tenant-registration-9755-service:9755/$request_uri;
         }
         location ~*     ^/chat-acd/(.*)$ {
-               resolver  kube-dns.kube-system.svc.cluster.local;
+               resolver  coredns.kube-system.svc.cluster.local;
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
                proxy_set_header        Host $host;
                proxy_http_version      1.1;
@@ -171,7 +171,7 @@ server                  {
         }
      
         location ~*     ^/acd-asm-chat/(.*)$ {
-               resolver  kube-dns.kube-system.svc.cluster.local;
+               resolver  coredns.kube-system.svc.cluster.local;
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
                proxy_set_header        Host $host;
                proxy_http_version      1.1;
@@ -181,7 +181,7 @@ server                  {
                proxy_pass              http://omicx-acd-asm-chat-6970-service.default.svc.cluster.local:6970/$1$is_args$args;
         }     
         location ~*     ^/acd-asm-email/(.*)$ {
-               resolver  kube-dns.kube-system.svc.cluster.local;
+               resolver  coredns.kube-system.svc.cluster.local;
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
                proxy_set_header        Host $host;
                proxy_http_version      1.1;
@@ -191,7 +191,7 @@ server                  {
                proxy_pass              http://omicx-acd-asm-email-7990-service.default.svc.cluster.local:7990/$1$is_args$args;
         }
         location ~*     ^/report/(.*)$ {
-               resolver  kube-dns.kube-system.svc.cluster.local;
+               resolver  coredns.kube-system.svc.cluster.local;
 			   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
     		   add_header Referrer-Policy strict-origin-when-cross-origin;
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -203,7 +203,7 @@ server                  {
                proxy_pass              http://omicx-autocall-report-80-service.default.svc.cluster.local:80/$1$is_args$args;
         }
         location ~*     ^/statistic/(.*)$ {
-               resolver  kube-dns.kube-system.svc.cluster.local;
+               resolver  coredns.kube-system.svc.cluster.local;
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
                proxy_set_header        Host $host;
                proxy_http_version      1.1;
