change schema registry service name

--- a/omicx/resources/authorization-service/appsettings.json
+++ b/omicx/resources/authorization-service/appsettings.json
@@ -27,7 +27,7 @@
         "clientId": "AuthorizationService",
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
         "groupId": "AuthorizationService",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
         "saslUsername": "kafka-admin",
@@ -38,7 +38,7 @@
         "requestResponseConsumer": {
           "clientId": "AuthorizationService",
           "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-          "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+          "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
           "securityProtocol": "SaslPlaintext",
           "saslMechanism": "ScramSha512",
           "saslUsername": "kafka-admin",
@@ -51,7 +51,7 @@
           "clientId": "AuthorizationService",
           "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
           "groupId": "AuthorizationService",
-          "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+          "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
           "securityProtocol": "SaslPlaintext",
           "saslMechanism": "ScramSha512",
           "saslUsername": "kafka-admin",
@@ -62,14 +62,14 @@
       },
       "producer": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
         "saslUsername": "kafka-admin",
         "saslPassword": "Metech123"
       },
       "schemaRegistry": {
-        "url": "http://schema-headless:8081"
+        "url": "http://omicx-schema-headless:8081"
       },
       "requestTimeout": 120000,
       "produceTopics": {
