--- a/omicx/resources/autocall-report/appsettings.json
+++ b/omicx/resources/autocall-report/appsettings.json
@@ -41,7 +41,7 @@
     },
     "consumer": {
       "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-      "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "groupId": "reportingGroup2",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
@@ -49,7 +49,7 @@
       "saslPassword": "Metech123",
       "report1": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup21",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -58,7 +58,7 @@
       },
       "report2": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup22",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -67,7 +67,7 @@
       },
       "report3": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup23",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -76,7 +76,7 @@
       },
       "report4": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup24",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -85,7 +85,7 @@
       },
       "report5": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup25",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -94,7 +94,7 @@
       },
       "report6": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup26",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
