--- a/omicx/resources/channel-manager/appsettings.json
+++ b/omicx/resources/channel-manager/appsettings.json
@@ -37,7 +37,7 @@
     "Consumer": {
       "GroupId": "channel_manager",
       "SessionTimeoutMs": 30000,
-      "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -54,7 +54,7 @@
       "MessageMaxBytes": 15728640
     },
     "schemaRegistry": {
-      "url": "http://schema-headless:8081"
+      "url": "http://omicx-schema-headless:8081"
     },
     "requestTimeout": 120000
   },
