--- a/omicx/resources/domain-registry/appsettings.json
+++ b/omicx/resources/domain-registry/appsettings.json
@@ -48,7 +48,7 @@
       "saslPassword": "Metech123"
     },
     "schemaRegistry": {
-      "url": "http://schema-headless:8081"
+      "url": "http://omicx-schema-headless:8081"
     },
     "requestTimeout": 120000
   },
