--- a/omicx/resources/job-common/appsettings.json
+++ b/omicx/resources/job-common/appsettings.json
@@ -53,7 +53,7 @@
     "kafka": {
       "admin": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
         "saslUsername": "kafka-admin",
@@ -62,7 +62,7 @@
       "consumer": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
         "groupId": "omicxJobCommon",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
         "saslUsername": "kafka-admin",
@@ -72,7 +72,7 @@
         "autoOffsetReset": "earliest",
         "requestResponseConsumer": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
         "saslUsername": "kafka-admin",
@@ -85,7 +85,7 @@
         "consumeOnlyConsumer": {
           "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
           "groupId": "omicxJobCommon",
-          "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+          "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
           "securityProtocol": "SaslPlaintext",
           "saslMechanism": "ScramSha512",
           "saslUsername": "kafka-admin",
@@ -97,14 +97,14 @@
       },
       "producer": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
         "saslUsername": "kafka-admin",
         "saslPassword": "Metech123"
       },
       "schemaRegistry": {
-        "url": "http://schema-headless:8081"
+        "url": "http://omicx-schema-headless:8081"
       },
       "topics": [
         "Report.AutoCallHistory.ExportResponse",
