--- a/omicx/resources/chat-statistics/appsettings.json
+++ b/omicx/resources/chat-statistics/appsettings.json
@@ -30,7 +30,7 @@
     },
     "consumer": {
       "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-      "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "groupId": "chatStatisticsGroup2",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
@@ -38,7 +38,7 @@
       "saslPassword": "Metech123",
       "report1": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup21",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -47,7 +47,7 @@
       },
       "report2": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup22",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -56,7 +56,7 @@
       },
       "report3": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup23",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -65,7 +65,7 @@
       },
       "report4": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup24",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -74,7 +74,7 @@
       },
       "report5": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup25",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -83,7 +83,7 @@
       },
       "report6": {
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup26",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
