--- a/omicx/resources/job-email/appsettings.json
+++ b/omicx/resources/job-email/appsettings.json
@@ -32,7 +32,7 @@
   "Kafka": {
     "admin": {
       "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-      "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -42,7 +42,7 @@
       "clientId": "CRM-JOB",
       "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
       "groupId": "omicxJobEmail",
-      "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -53,7 +53,7 @@
       "requestResponseConsumer": {
       "clientId": "CRM-JOB",
       "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-      "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -66,7 +66,7 @@
         "clientId": "CRM-JOB",
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
         "groupId": "omicxJobEmail",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
         "saslUsername": "kafka-admin",
@@ -77,14 +77,14 @@
     },
     "producer": {
       "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
-      "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
       "saslPassword": "Metech123"
     },
     "schemaRegistry": {
-      "url": "http://schema-headless:8081"
+      "url": "http://omicx-schema-headless:8081"
     }
   },
   "Job": {
