--- a/omicx/resources/sync-tracker/appsettings.json
+++ b/omicx/resources/sync-tracker/appsettings.json
@@ -31,7 +31,7 @@
       "saslPassword": "Metech123"
     },
     "schemaRegistry": {
-      "url": "http://schema-headless:8081/"
+      "url": "http://omicx-schema-headless:8081/"
     }
   },
   "Swagger": {
