--- a/omicx/resources/tenant-registration/appsettings.json
+++ b/omicx/resources/tenant-registration/appsettings.json
@@ -56,7 +56,7 @@
       "saslPassword": "Metech123"
     },
     "schemaRegistry": {
-      "url": "http://schema-headless:8081"
+      "url": "http://omicx-schema-headless:8081"
     },
     "topics": [
       "Omicx.Tenant.Initialize.Response",
