--- a/omicx/resources/web-be/appsettings.json
+++ b/omicx/resources/web-be/appsettings.json
@@ -90,7 +90,7 @@
       "clientId": "CRM",
       "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
       "groupId": "omicxCRM",
-      "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -102,7 +102,7 @@
       "clientId": "CRM",
       "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
       "groupId": "omicxCRM",
-      "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -114,7 +114,7 @@
         "clientId": "CRM",
         "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
         "groupId": "omicxCRM",
-        "jsonSchemaRegistryServer": "http://schema-headless:8081/",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
         "saslUsername": "kafka-admin",
@@ -131,7 +131,7 @@
       "saslPassword": "Metech123"
     },
     "schemaRegistry": {
-      "url": "http://schema-headless:8081"
+      "url": "http://omicx-schema-headless:8081"
     },
     "requestTimeout": 120000,
     "topics": [
