update helm package

--- a/omicx/resources/web-be/appsettings.json
+++ b/omicx/resources/web-be/appsettings.json
@@ -3,7 +3,7 @@
     "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True"
   },
   "App": {
-    "SyncConnectionString": true,
+    "SyncConnectionString": false,
     "Multitenancy": true,
     "DomainRegistryUrl": "http://omicx-domain-registry-9722-service:9722",
     "FreeSwitchBaseUrl": "https://ai.metechvn.com/",
